--- a/Trabalho - Supermercado/hortifruti.html
+++ b/Trabalho - Supermercado/hortifruti.html
@@ -85,7 +85,7 @@
  
         <div class="row center">
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-hortifruti/alho.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (1).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Alho - 1Kg</h5>
               <br>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/banana.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (2).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Banana Nanica - 1Kg</h5>
               <p class="card-text mt-auto">R$6,89</p>
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/cebola.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (10).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Cebola - 1Kg</h5>
               <br>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/limao.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (4).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Limão Taiti - 1Kg</h5>
               <br>
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-hortifruti/tomate.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (9).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Tomate - 1Kg</h5>
               <br>
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/mamao-papaya-kg_11281-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (12).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Mamão Papaya - 1Kg</h5>
               <p class="card-text mt-auto">R$12,99</p>
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/maca-vermelha-gala-kg_11276-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (5).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Maçã Gala - 1Kg</h5>
               <br>
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/cenoura-kg_10840-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (3).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Cenoura - 1Kg</h5>
               <br>
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-hortifruti/manga.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (6).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Manga Palmer - 1Kg</h5>
               <br>
@@ -164,15 +164,15 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/maracuja.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (7).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Maracujáca Azedo - 1Kg</h5>
+              <h5 class="card-title">Maracujá Azedo - 1Kg</h5>
               <p class="card-text mt-auto">R$9,99</p>
               <a href="#" class="btn mt-auto back-produtos color-white">Adicionar ao carrinho</a>
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/melao.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (12).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Melão - 1Kg</h5>
               <br>
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-hortifruti/pokan.png" class="card-img-top" alt="...">
+            <img src="img-hortifruti/frutas (8).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Laranja Ponkan - 1Kg</h5>
               <p class="card-text mt-auto">R$4,99</p>
