--- a/congelados.html
+++ b/congelados.html
@@ -84,7 +84,7 @@
  
         <div class="row center">
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-congelados/anel-de-cebola-mccain-congelado-400g_71616-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (1).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Anel de Cebola Mccain Congelado 400g</h5>
               <p class="card-text mt-auto">R$21,90</p>
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/brocolis-florete-daucy-300g_81783-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (2).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Brócolis Florete D'Aucy Congelado 300g</h5>
               <p class="card-text mt-auto">R$5,99</p>
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/brocolis-grano-congelado-300g_90634-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (3).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Brócolis Grano Congelado 300g</h5>
               <br>
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/couve-flor-grano-congelado-300g_90631-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (4).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Couve-Flor Grano Congelado 300g</h5>
               <br>
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-congelados/ervilha-grano-congelada-300g_90637-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (5).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Ervilha Grano Congelada 300g</h5>
               <br>
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/fgo-korin-cong-kg_94684-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (6).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Frango Inteiro Korin Congelado 3,5Kg</h5>
               <br>
@@ -136,7 +136,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/filezinho-de-frango-sadia-congelado-1kg_81640-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (7).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Filezinho de Frango Sadia Congelado 1kg</h5>
               <p class="card-text mt-auto">R$18,29</p>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/frango-galeto-sadia-congkg_86927-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (8).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Frango Galeto Sadia Congelado 1kg</h5>
               <br>
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4 " style="max-width: 14rem;">
-            <img src="img-congelados/grao-bico-grano-300g-cong_81798-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (9).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Grão de Bico Grano Congelado 300g</h5>
               <p class="card-text mt-auto">R$5,99</p>
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/kani-kama-congelado-250g_49709-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (10).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Kani Kama Congelado 250g</h5>
               <p class="card-text mt-auto">R$14,99</p>
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/morango-congelado-de-marchi-102kg_103078-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (11).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Morango Congelado De Marchi 1.02kg</h5>
               <p class="card-text mt-auto">R$27,99</p>
@@ -177,7 +177,7 @@
             </div>
           </div>
           <div class="card border-produtos col-12 mt-3 p-0 mx-4" style="max-width: 14rem;">
-            <img src="img-congelados/posta-de-cacao-congelado-800g_12426-removebg-preview.png" class="card-img-top" alt="...">
+            <img src="img-congelados/congelados (12).png" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Posta de Cação Congelado 800g</h5>
               <p class="card-text mt-auto">R$26,89</p>
